--- a/puppetwash.example.yaml
+++ b/puppetwash.example.yaml
@@ -1,4 +1,9 @@
 my_pe_instance:
-  puppetdb_url: https://pupetmaster.example.com:8081
+  puppetdb_url: https://puppetmaster.example.com:8081
   rbac_token: <my_rbac_token>
   cacert: /path/to/cacert.pem # from /etc/puppetlabs/puppet/ssl/certs/ca.pem on the master
+my_oss_instance:
+  puppetdb_url: https://puppetdb.example.com:8081
+  cacert: /path/to/cacert.pem # maybe /etc/puppetlabs/puppetdb/ssl/certs/ca.pem
+  cert: /path/to/cert.pem
+  key: /path/to/key.pem
